Complete forum polling package

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "hubot-irc": "~0.1.24"
+    "hubot-irc": "~0.1.24",
+    "rsvp": "3.0.6"
   },
   "engines": {
     "node": ">= 0.8.x",
