Adding conversion script

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-irc": "~0.1.24",
+    "hubot-calculator": ">= 0.2.0",
     "rsvp": "3.0.6"
   },
   "engines": {
